fix: add handling of collections without image covers

--- a/assets/base.css
+++ b/assets/base.css
@@ -255,6 +255,9 @@
   .tw\:mt-8 {
     margin-top: calc(var(--tw-spacing) * 8) !important;
   }
+  .tw\:mt-12 {
+    margin-top: calc(var(--tw-spacing) * 12) !important;
+  }
   .tw\:mr-24 {
     margin-right: calc(var(--tw-spacing) * 24) !important;
   }
